Fix the overflow for the ol elements

--- a/app/assets/stylesheets/RonRonnement.css.scss
+++ b/app/assets/stylesheets/RonRonnement.css.scss
@@ -826,7 +826,7 @@ footer.actions {
       border-image:         url('/favicon.png') 0 0 0 32;
     }
   }
-  ul {
+  ul,ol {
     overflow: hidden;
     padding-bottom: 1px;
   }
